# materialize

misc/helm-charts/: index.yaml  materialize-operator-v25.1.0-beta.1.tgz
misc/helm-charts/operator/: README.md  values.yaml
src/cloud-api/: Cargo.toml
src/cloud-api/src/: client.rs  lib.rs
